# grid-seq

./: CLAUDE.md  README.md  meson.build  test_pattern  test_pattern.c
docs/: grid-seq-plan.md  implementation.md  launchpad-quickref.md
docs/ignore/: starter-prompt.md
include/grid_seq/: common.h
scripts/: install_user.sh
src/: grid_seq.c  gui.c  gui_x11.c  launchpad.c  launchpad.h  sequencer.c  sequencer.h  state.c  state.h
ttl/: grid_seq.ttl  manifest.ttl
